<resources>

    <string name="app_name">Spielesammlung</string>
    <string name="boardgames">Brettspiele</string>
    <string name="cardgames">Kartenspiele</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="yes">JA</string>
    <string name="no">NEIN</string>
    <string name="undo">UNDO</string>

    <!-- Cardgames -->
    <string name="bauernkrieg">"Bauernkrieg"</string>
    <string name="bauernkrieg_regeln">Zu Beginn des Spieles werden alle Karten verteilt und verdeckt bei jedem Spieler auf einen Stapel aufgelegt. Dann spielen die beiden Spieler die oberste Karte und die beiden vergleichen die Ränge. Wer den höhere Rang hat, nimmt beide Karten zu sich. Gewinner ist, wer mehr Karten erspielt hat. Haben die zwei Karten denselben Rang, so spielt jeder Spieler die nächste Karte verdeckt. Dann spielen sie eine nächste Karte auf. Wer jetzt den höheren Rang hat, nimmt danach alle sechs Karten. Besteht wieder Kartengleichheit, so wird das Verfahren wiederholt. Das Spiel dauert solange, bis die beiden Stapel aufgebraucht sind (Besteht zu dieser Zeit Kartengleichheit, bleiben die Karten in der Mitte liegen).</string>
    <string name="start">Klicke um zu Starten</string>
    <string name="rules">Regeln</string>
    <string name="maumau_regeln">Ziel des Spieles ist es, die Karten aus der Hand möglichst schnell abzulegen. Der Reihe nach legen die Spieler je eine Karten offen auf die nebenliegende Karte - wenn dies möglich ist. Möglich ist dies, wenn die abzulegende Karte in Kartenwert oder Kartenfarbe mit der obersten offen liegenden Karte übereinstimmt. Kann ein Spieler keine Karte ablegen, so muss er eine Karte vom Talon ziehen. Je nach Regel darf er anschliessend diese Karte, wenn sie den angegebenen Bedingungen genügt, ablegen, oder muss warten, bis er erneut an der Reihe ist. Ist der Talon irgendwann aufgebraucht, so werden die abgelegten Karten, ausser der obersten sichtbaren, erneut als Talon ausgelegt.</string>
    <string name="maumau">Mau Mau</string>
    <string name="schafkopf">Schafkopf</string>
    <string name="objErfolg">objekt erfolgreich erstellt</string>
    <string name="debug">Debugger wurde erfolgreich erreicht</string>
    <string name="schafkopf_regeln">Beim Offiziersschafkopf oder auch aufgedecktem schafkopf bekommt jeder 16 karten, jeweils 8 2er stapel. Der untere Spieler beginnt, es gelten die Standard schafkopf bekenn und stech regeln. Der Spieler mit den meisten Punkten am ende gewinnt!</string>

    <!-- Chess -->
    <string name="game_consolechess_enter_cmd_here">Bitte Command eingeben</string>
    <string name="game_consolechess_confirm_input">desc_button_confirm</string>
    <string name="game_consolechess_cmd_help">Available commands:\nhelp, restart, show, move &lt;from&gt; &lt;to&gt;</string>
    <string name="game_consolechess_err_invalid_cmd">Not a valid command</string>
    <string name="game_consolechess_err_invalid_move">Invalid move</string>
    <string name="game_consolechess_description">Schach mit Konsole</string>
    <string name="game_consolechess_rules">Es gelten die normalen &lt;a href=&quot;https://de.wikipedia.org/wiki/Schach#Spielregeln&quot;&gt;Regeln&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;&gt;&gt; move (mv) &lt;von&gt; &lt;zu&gt; &lt;br/&gt;   bewege die Figur&lt;br/&gt;&lt;br/&gt;&gt;&gt; overview (ov)&lt;br/&gt;   zeigt momentanes Spiel&lt;br/&gt;&lt;br/&gt;&gt;&gt; show &lt;br/&gt;   zeigt momentane FEN-Notation&lt;br/&gt;&lt;br/&gt;&gt;&gt; restart &lt;br/&gt;   starte das Spiel neu&lt;br/&gt;&lt;br/&gt;&gt;&gt; clear &lt;br/&gt;   lösche das Textfeld&lt;br/&gt;&lt;br/&gt;&gt;&gt; aimove (ai) &lt;br/&gt;   lass die KI einen Zug machen&lt;br/&gt;&lt;br/&gt;&gt;&gt; hint &lt;br/&gt;   bekomme einen Tipp</string>
    <string name="game_chess_promotion_dialog_title">Wähle eine Figur</string>
    <string name="game_chess_snackbar_gameover">Spielende:\u0020</string>
    <string name="game_chess_mate">Schach</string>
    <string name="game_chess_gameover_stalemate">Patt</string>
    <string name="game_chess_gameover_checkmate_white">Schachmatt, Weiß hat gewonnen</string>
    <string name="game_chess_gameover_checkmate_black">Schachmatt, Schwarz hat gewonnen</string>
    <string name="game_chess_gameover_noreason">Einfach so, keinen bestimmten Grund</string>
    <string name="game_chess_title">Schach</string>
    <string name="game_chess_960_title">Schach-960</string>
    <string name="game_chess_player_vs_player">Spieler vs Spieler</string>
    <string name="game_chess_player_vs_ai">Spieler vs Computer</string>
    <string name="game_chess_rules">Es gelten die normalen &lt;a href=&quot;https://de.wikipedia.org/wiki/Schach#Spielregeln&quot;&gt;Spielregeln&lt;/a&gt;</string>
    <string name="game_chess_960_rules">Es gelten die Regeln des &lt;a href=&quot;https://de.wikipedia.org/wiki/Chess960&quot;&gt;Schach-960&lt;/a&gt;</string>
    <string name="game_chess_not_available">NO</string>

    <!-- Strings for NavDrawer START -->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="subTextHeader">Spiel, Spaß und Spannung</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_item_hub">Spielehub</string>
    <string name="nav_item_cardgames">Kartenspiele</string>
    <string name="nav_item_boardgames">Brettspiele</string>
    <string name="nav_item_info">Info</string>
    <string name="nav_item_settings">Einstellungen</string>

    <string name="nav_divider_title">Other</string>
    <!-- Strings for NavDrawer END -->

    <string name="hello_blank_fragment">Spielehub Content</string>
    <string name="fragment_hub_empty_text">Drücke +, um ein neues Spiel zu beginnen</string>

    <!-- App Bar -->
    <string name="action_gamerules">Spielregeln</string>
    <string name="action_restore">Standardeinstellungen wiederherstellen</string>

    <!-- Savegames -->
    <string name="yesterday">gestern</string>
    <string name="savegame_deleted">Spielstand gelöscht</string>

    <!-- SettingsActivity START -->
    <string name="settings_general_title">Allgemein</string>
    <string name="settings_general_accent_color_title">Akzentfarbe</string>
    <string name="settings_general_accent_color_description">Farbe des Floating Action Buttons</string>
    <string name="settings_general_accent_color_key">settings_key_general_accent_color</string>
    <string name="settings_color_select_title">Wähle eine Farbe</string>
    <string name="settings_restore_preferences_title">Einstellung zurück setzen</string>
    <string name="settings_restore_preferences_message">Wollen Sie die Einstellungen komplett zurück setzen?</string>

    <!-- SettingsActivity Boardgames -->
    <string name="settings_chess_title">Schach</string>
    <string name="settings_chess_difficulty_title">Schwierigkeit</string>
    <string name="settings_chess_difficulty_description">Intelligenz der KI</string>
    <string name="settings_chess_difficulty_key">settings_key_chess_vs_computer_difficulty</string>
    <string-array name="AI_difficulty_alias">
        <item>Einfach</item>
        <item>Normal</item>
        <item>Schwer</item>
    </string-array>
    <string-array name="AI_difficulty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="settings_chess_color_light">Helle Felder</string>
    <string name="settings_chess_color_light_description">Farbe der hellen Felder</string>
    <string name="settings_chess_color_light_key">settings_key_chess_color_light</string>
    <string name="settings_chess_color_dark">Dunkle Felder</string>
    <string name="settings_chess_color_dark_description">Farbe der dunklen Felder</string>
    <string name="settings_chess_color_dark_key">settings_key_chess_color_dark</string>
    <string name="settings_chess_color_border">Randfarbe</string>
    <string name="settings_chess_color_border_description">Farbe des Randes</string>
    <string name="settings_chess_color_border_key">settings_key_chess_color_border</string>
    <string name="settings_chess_color_suggestion">Vorgeschlagene Felder</string>
    <string name="settings_chess_color_suggestion_description">Farbe der vorgeschlagenen Felder</string>
    <string name="settings_chess_color_suggestion_key">settings_key_chess_color_suggestion</string>
    <string name="settings_chess_color_highlight">Ausgewählte Felder</string>
    <string name="settings_chess_color_highlight_description">Farbe der ausgewählten Felder</string>
    <string name="settings_chess_color_highlight_key">settings_key_chess_color_highlight</string>

    <!-- Info -->
    <string name="info_libraries_title">Bibliotheken</string>
    <string name="more_information">Für mehr Information drücken</string>
    <string name="library_carballo_title">Carballo Chess Engine</string>
    <string name="library_carballo_text">Version 1.7\n\nAutor: <a href="http://www.alonsoruibal.com">Alberto Alonso Ruibal</a>\n\nLizensiert unter <a href="https://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>\n\n<a href="https://github.com/albertoruibal/carballo">Github</a></string>
    <string name="library_carballo_key">info_libraries_carballo</string>
    <string name="library_jdroidlib_title">JDroidLib</string>
    <string name="library_jdroidlib_text">Version 1.51\n\nAutor: <a href="http://www.aplu.ch">Aegidius Plüss</a>\n\nLizensiert als <a href="http://www.aplu.ch/home/viewthread.jsp?mid=1519">\&quot;Open Source Free Software\&quot;</a> </string>
    <string name="library_jdroidlib_key">info_libraries_jdroidlib</string>
    <string name="library_colorpicker_title">Color Picker</string>
    <string name="library_colorpicker_text">Version 1.0.0\n\nAutor: <a href="https://github.com/jaredrummler">Jared Rummler</a>\n\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\n\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
    <string name="library_colorpicker_key">info_libraries_colorpicker</string>
    <string name="info_auhtors_title">Autoren</string>
    <string name="info_authors_oliver_title">Oliver Gawron</string>
    <string name="info_authors_oliver_summary">Schach ♜</string>
    <string name="info_authors_oliver_key">info_authors_oliver</string>
    <string name="info_authors_philipp_title">Philipp Jung</string>
    <string name="info_authors_philipp_summary">Kartenspiele 🂠</string>
    <string name="info_authors_philipp_key">info_authors_philipp</string>
    <string name="info_authors_leonard_title">Leonard Nickels</string>
    <string name="info_authors_leonard_summary">User Interface und Spielstände 🎮</string>
    <string name="info_authors_leonard_key">info_authors_leonard</string>
    <string name="info_authors_frank_title">Frank Rügamer</string>
    <string name="info_authors_frank_summary">Spiele-Framework 🎲☜ und Schach</string>
    <string name="info_authors_frank_key">info_authors_frank</string>
</resources>
