<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="info_licenses"
        android:title="@string/info_libraries_title">

        <Preference
            android:key="@string/library_carballo_key"
            android:summary="@string/more_information"
            android:title="@string/library_carballo_title" />
        <Preference
            android:key="@string/library_jdroidlib_key"
            android:summary="@string/more_information"
            android:title="@string/library_jdroidlib_title" />
        <Preference
            android:key="@string/library_colorpicker_key"
            android:summary="@string/more_information"
            android:title="@string/library_colorpicker_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="info_authors"
        android:title="@string/info_auhtors_title">

        <Preference
            android:key="@string/info_authors_oliver_key"
            android:summary="@string/info_authors_oliver_summary"
            android:title="@string/info_authors_oliver_title" />
        <Preference
            android:key="@string/info_authors_philipp_key"
            android:summary="@string/info_authors_philipp_summary"
            android:title="@string/info_authors_philipp_title" />
        <Preference
            android:key="@string/info_authors_leonard_key"
            android:summary="@string/info_authors_leonard_summary"
            android:title="@string/info_authors_leonard_title" />
        <Preference
            android:key="@string/info_authors_frank_key"
            android:summary="@string/info_authors_frank_summary"
            android:title="@string/info_authors_frank_title" />

    </PreferenceCategory>

</PreferenceScreen>