<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE games [
    <!ELEMENT games (category*)>
    <!ELEMENT category (game*)>
    <!ATTLIST category id ID #REQUIRED>
    <!ATTLIST category title CDATA #REQUIRED>
    <!ATTLIST category icon CDATA #REQUIRED>
    <!ELEMENT game EMPTY>
    <!ATTLIST game title CDATA #REQUIRED>
    <!ATTLIST game description CDATA #REQUIRED>
    <!ATTLIST game icon CDATA #REQUIRED>
    <!ATTLIST game rules CDATA #REQUIRED>
    <!ATTLIST game tag CDATA #IMPLIED>
    <!ATTLIST game activity CDATA #REQUIRED>
]>
<games>

    <category
        id="boardgames"
        title="@string/boardgames"
        icon="@drawable/icon_checkerboard">

        <game
            title="@string/game_chess_title"
            description="@string/game_chess_player_vs_player"
            icon="@mipmap/ic_launcher"
            rules="@string/game_chess_rules"
            activity="Chess" />

        <game
            title="@string/game_chess_title"
            description="@string/game_chess_player_vs_ai"
            icon="@mipmap/ic_launcher"
            rules="@string/game_chess_rules"
            tag="aiGame"
            activity="Chess" />

        <game
            title="@string/game_chess_960_title"
            description="@string/game_chess_player_vs_player"
            icon="@mipmap/ic_launcher"
            rules="@string/game_chess_960_rules"
            tag="chess960"
            activity="Chess" />

        <game
            title="@string/game_chess_960_title"
            description="@string/game_chess_player_vs_ai"
            icon="@mipmap/ic_launcher"
            rules="@string/game_chess_960_rules"
            tag="aiGame|chess960"
            activity="Chess" />

        <game
            title="@string/game_chess_title"
            description="@string/game_consolechess_description"
            icon="@mipmap/ic_launcher"
            rules="@string/game_consolechess_rules"
            activity="ConsoleChess" />

    </category>

    <category
        id="cardgames"
        title="@string/cardgames"
        icon="@drawable/icon_cards_playing">

        <game
            title="Bauernkrieg"
            description="Einfaches Stechen"
            icon="@mipmap/ic_launcher"
            rules="@string/bauernkrieg_regeln"
            activity="BauernkriegMenu" />

        <game
            title="Mau Mau"
            description="Klassisches Trumpfkartenspiel gegen die KI"
            icon="@mipmap/ic_launcher"
            rules="@string/maumau_regeln"
            activity="MauMauMenu" />

        <game
            title="Offiziersschafkopf"
            description="2 Personen Schafkopf"
            icon="@mipmap/ic_launcher"
            rules="@string/schafkopf_regeln"
            activity="schafkopfMenu" />

    </category>

</games>
