<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_hub"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/nav_item_hub" />

        <item
            android:id="@+id/nav_item_cardgames"
            android:icon="@drawable/icon_cards_playing"
            android:title="@string/nav_item_cardgames" />

        <item
            android:id="@+id/nav_item_boardgames"
            android:icon="@drawable/icon_checkerboard"
            android:title="@string/nav_item_boardgames" />

    </group>

    <item android:title="@string/nav_divider_title">

        <menu>

            <item
                android:id="@+id/nav_item_information"
                android:icon="@drawable/icon_information"
                android:title="@string/nav_item_info" />

            <item
                android:id="@+id/nav_item_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/nav_item_settings" />

        </menu>

    </item>

</menu>