<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="settings_key_general"
        android:title="@string/settings_general_title">

        <com.jaredrummler.android.colorpicker.ColorPreference
            android:defaultValue="@color/colorAccent"
            android:key="settings_key_general_accent_color"
            android:summary="@string/settings_general_accent_color_description"
            android:title="@string/settings_general_accent_color_title"
            app:cpv_dialogTitle="@string/settings_color_select_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_key_chess_vs_computer"
        android:title="@string/settings_chess_description_computer">

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/AI_difficulty_alias"
            android:entryValues="@array/AI_difficulty"
            android:key="settings_key_chess_vs_computer_difficulty"
            android:summary="@string/settings_chess_difficulty_description"
            android:title="@string/settings_chess_difficulty_title" />

    </PreferenceCategory>

</PreferenceScreen>