<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bauernkrieg.BauernkriegMenu">

    <Button
        android:id="@+id/bkm_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoBauernkrieggame"
        android:text="@string/start" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/rules"
        android:textOn="@string/bauernkrieg_regeln" />

</LinearLayout>